fix img overflow the content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,6 +183,16 @@ hr {
     text-decoration: underline;
 }
 
+.message .content a:hover{
+    color: #afafaf;
+}
+
+.message .content img{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 57px;
+}
+
 .message .reply {
     bottom: 12px;
     font-family: 'Inter', sans-serif;
